@@ -1,3 +1,8 @@
+Fri Aug 29 10:58:45 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
+
+	* utils/dump_field_actions.py: Sort the fields, and allow a
+	  specific field to be requested.
+
 Fri Aug 29 10:39:27 GMT 2008  Richard Boulton <richard@lemurconsulting.com>
 
 	* utils/dump_field_actions.py: Add script to dump the field actions
